config-root/namespaces/jx-staging/tf-spring-demo-jx-tf-spring-demo/jx-tf-spring-demo-tf-spring-demo-deploy.yaml
# Source: tf-spring-demo/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jx-tf-spring-demo-tf-spring-demo
  labels:
    draft: draft-app
    chart: "tf-spring-demo-0.0.5"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'jx-tf-spring-demo'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-staging
spec:
  selector:
    matchLabels:
      app: jx-tf-spring-demo-tf-spring-demo
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: jx-tf-spring-demo-tf-spring-demo
    spec:
      serviceAccountName: jx-tf-spring-demo-tf-spring-demo
      containers:
        - name: tf-spring-demo
          image: "890324431850.dkr.ecr.ap-south-1.amazonaws.com/data-platform-skn/tf-spring-demo:0.0.5"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
