config-root/namespaces/jx-staging/tf-spring-demo-jx-tf-spring-demo/tf-spring-demo-svc.yaml
# Source: tf-spring-demo/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tf-spring-demo
  labels:
    chart: "tf-spring-demo-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'jx-tf-spring-demo'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: jx-tf-spring-demo-tf-spring-demo
